# em-serving

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: fetch-upstream.yml
app/: config.py  main.py
app/backends/: base.py  codet5p.py
app/routers/: embeddings.py
app/schemas/: embedding.py
docs/: api-design-decisions.md  environment.md  model-migration.md  pre-analysis.md  testing.md
docs/ref/: local_codet5p_model.py  onnx_codet5p_model.py
tests/: test_embeddings.py
